Update h1 style to show correctly on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -416,12 +416,10 @@ p {
 }
 
 .top_left_cont h1 {
-    font-size: 40px;
-    color: #FFF;
-    margin: 0 0 26px 0;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-    line-height: 70px;
+font-size: 25px;
+color: #FFF;
+line-height: 39px;
+margin: 0 0 9px 0;
 }
 
 .top_left_cont h1 strong {
